# React-FastAPI-App-Template

./: .env  .gitignore  README.md  docker-compose.yml
.docker/: mariadb.conf
api/: Dockerfile  README.md  pyproject.toml  requirements.txt  root.py
api/alembic/: __init__.py  env.py
api/models/: README.md  example_user_models.py
api/routers/: README.md  example_user_router.py
api/services/: README.md
api/services/auth/: __init__.py  models.py  password.py  router.py  schemas.py  service.py  utils.py
api/services/database/: DatabaseService.py  __init__.py  config.py  db.py  models.py
api/services/health/: router.py
api/services/logging/: Logger.py  LoggerConfig.py
api/services/logging/util/: logger_util.py
api/services/nuid_generation/: NUIDGenerator.py
api/services/uid_generation/: UIDGenerator.py
api/src/: middleware.py
api/src/middleware/: middleware.py
api/util/: middleware.py
scripts/: install.ps1  reset.sh  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh
scripts/util/: load_dotenv.ps1  log.ps1
ui/: Dockerfile  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
ui/public/: README.md
ui/src/: Root.css  Root.jsx  index.css  main.jsx
ui/src/modules/buttons/: index.js
ui/src/modules/buttons/button-primary/: ButtonPrimary.css  ButtonPrimary.jsx
ui/src/modules/buttons/np-button-primary/: NPButtonPrimary.css  (+1 more)
ui/src/modules/layouts/: debug.css  index.js
ui/src/modules/modals/: index.js
ui/src/pages/Home/: Home.css  Home.jsx
ui/src/util/: apiClient.js  axiosClient.js  hooks.js
(+13 files in other folders)
