[project]
name = "AppTemplate-api"
version = "0.1.0"
description = "Project Description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]
